# Raw-Rendering-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  model.json
raw_renderer/include/containers/: linked_list.hpp  thread_safe_ring_buffer.hpp  vector.hpp
raw_renderer/include/core/: application.hpp  asserts.hpp  defines.hpp  input.hpp  job_system.hpp  keycodes.hpp  logger.hpp  mouse.hpp  service.hpp  servicelocator.hpp  string.hpp  timer.hpp
raw_renderer/include/ecs/: component.hpp  component_manager.hpp  core_components.hpp
raw_renderer/include/editor/: editor.hpp
raw_renderer/include/events/: core_events.hpp  event.hpp  event_handler.hpp  event_manager.hpp  renderer_events.hpp
raw_renderer/include/memory/: helpers.hpp  memory_service.hpp  smart_pointers.hpp
raw_renderer/include/memory/allocators/: allocators.hpp  heap_allocator.hpp
raw_renderer/include/platform/: console.hpp  multiplatform_window.hpp  window.hpp
raw_renderer/include/renderer/: camera.hpp  command_buffer.hpp  command_buffer_manager.hpp  gfxdevice.hpp  gpu_resources.hpp  renderer.hpp  renderer_data.hpp  renderer_enums.hpp
raw_renderer/include/renderer/render_passes/: depth_pass.hpp  forward_pass.hpp  frustum_culling_pass.hpp  fullscreen_pass.hpp  fxaa_pass.hpp  geometry_pass.hpp  lighting_pass.hpp  render_pass.hpp  shadow_pass.hpp  ssao_pass.hpp  ssr_pass.hpp  transparency_pass.hpp
raw_renderer/include/renderer/vulkan/: vk_command_buffer.hpp  vk_command_buffer_manager.hpp  vk_descriptors.hpp  vk_gfxdevice.hpp  vk_immediate_executor.hpp  vk_types.hpp  vk_utilities.hpp
raw_renderer/include/resources/: buffer_loader.hpp  deletion_queue.hpp  resource_manager.hpp  resource_pool.hpp  texture_loader.hpp
raw_renderer/include/scene/: scene.hpp
raw_renderer/include/utility/: gltf.hpp  hash.hpp
raw_renderer/src/core/: application.cpp  entry_point.cpp  input.cpp  job_system.cpp  logger.cpp  servicelocator.cpp  string.cpp  timer.cpp
raw_renderer/src/editor/: editor.cpp
raw_renderer/src/events/: event_manager.cpp
raw_renderer/src/memory/: helpers.cpp  memory_service.cpp
raw_renderer/src/memory/allocators/: heap_allocator.cpp
raw_renderer/src/platform/: console_linux.cpp  console_win32.cpp  multiplatform_window.cpp
raw_renderer/src/renderer/: camera.cpp  external_build.cpp  renderer.cpp
raw_renderer/src/renderer/render_passes/: depth_pass.cpp  forward_pass.cpp  frustum_culling_pass.cpp  fullscreen_pass.cpp  fxaa_pass.cpp  geometry_pass.cpp  lighting_pass.cpp  shadow_pass.cpp  ssao_pass.cpp  ssr_pass.cpp  transparency_pass.cpp
raw_renderer/src/renderer/vulkan/: vk_command_buffer.cpp  vk_command_buffer_manager.cpp  vk_descriptors.cpp  vk_gfxdevice.cpp  vk_immediate_executor.cpp  vk_utilities.cpp
raw_renderer/src/resources/: buffer_loader.cpp  resource_manager.cpp  texture_loader.cpp
raw_renderer/src/scene/: scene.cpp
raw_renderer/src/utility/: gltf.cpp
shaders/vulkan/: common.glsl  frustum_culling.comp  fullscreen.frag  fullscreen.vert  fxaa.comp  fxaa.frag  gbuffer.frag  gbuffer.vert  lighting.frag  pbr_forward.frag  pbr_forward.vert  shadow_pass.vert  ssao.comp  ssao_hemisphere.comp  ssao_sphere.comp  ssr.comp  transparency.frag  transparency.vert  zpass.vert
